language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_prefix_string_suffix_variable_with_alternative_definition_in_case.snap
---
source: language-server/src/tests/rename.rs
expression: "\nfn main() -> String {\n  let wibble = \"1-wibble\"\n  case wibble {\n    \"1\" <> rest | \"2\" <> rest -> rest\n    other -> other\n  }\n}\n"
---
----- BEFORE RENAME
-- app.gleam

fn main() -> String {
  let wibble = "1-wibble"
  case wibble {
    "1" <> rest | "2" <> rest -> rest
           ↑▔▔▔                      
    other -> other
  }
}


----- AFTER RENAME
-- app.gleam

fn main() -> String {
  let wibble = "1-wibble"
  case wibble {
    "1" <> new_name | "2" <> new_name -> new_name
    other -> other
  }
}
