language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_prelude_type.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn main() -> Result(Int, Nil) {\n  Ok(10)\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn main() -> Result(Int, Nil) {
                 ↑▔▔▔▔▔            
  Ok(10)
}


----- AFTER RENAME
-- app.gleam
import gleam.{type Result as SuccessOrFailure}

pub fn main() -> SuccessOrFailure(Int, Nil) {
  Ok(10)
}
