language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_prelude_type_to_original_name_do_not_import.snap
---
source: language-server/src/tests/rename.rs
expression: "pub fn go() -> Nil {\n  Nil\n}"
---
----- BEFORE RENAME
-- app.gleam
pub fn go() -> Nil {
               ↑▔▔  
  Nil
}


----- AFTER RENAME
-- app.gleam
pub fn go() -> Nil {
  Nil
}
