language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_prelude_type_to_original_name_remove_full_import_with_module_alias.snap
---
source: language-server/src/tests/rename.rs
expression: "import gleam.{type Nil as Null} as g\n\npub fn go() -> Null {\n  Nil\n}"
---
----- BEFORE RENAME
-- app.gleam
import gleam.{type Nil as Null} as g

pub fn go() -> Null {
               ↑▔▔▔  
  Nil
}


----- AFTER RENAME
-- app.gleam
import gleam.{} as g

pub fn go() -> Nil {
  Nil
}
