language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_prelude_type_with_prelude_value_imported_with_trailing_comma.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport gleam.{Error,}\n\npub fn main() -> Result(Int, Nil) {\n  Error(10)\n}\n"
---
----- BEFORE RENAME
-- app.gleam

import gleam.{Error,}

pub fn main() -> Result(Int, Nil) {
                 ↑▔▔▔▔▔            
  Error(10)
}


----- AFTER RENAME
-- app.gleam

import gleam.{Error, type Result as OkOrError}

pub fn main() -> OkOrError(Int, Nil) {
  Error(10)
}
