language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_prelude_value.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn main() {\n  Ok(10)\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn main() {
  Ok(10)
  ↑▔    
}


----- AFTER RENAME
-- app.gleam
import gleam.{Ok as Success}

pub fn main() {
  Success(10)
}
